welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value setPosX
		setPosX(getX(), getY() + 1);
                ^