welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {


var steps:Int = 0;



	while(!estArrive())
	{

		ecritMessage(steps);
		setPosX(getX(), getY() + 1);
		steps = steps + 1;
		if(getY() == 5)
		{
			setPos(getX() + 1, getY());
		}

	
	}
	
		

def estArrive() : Boolean = {

	var result = false;

	if(getX() == getMondeLargeur() - 1 && getY() == getMondeHauteur() - 1)
	{
		result = true;
	}

		return result;

	
}


}


